update website code

--- a/webserver/html/about.html
+++ b/webserver/html/about.html
@@ -4,15 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gene Expression</title>
+  <title>About</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="/css/html5reset.css" rel="stylesheet">
   <link href="/css/global.css" rel="stylesheet">
   <link href="/css/about.css" rel="stylesheet">
@@ -23,10 +18,10 @@
 
 <body class="about">
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html">Home</a>
         <a href="/html/ai_chat.html">Chat with AI</a>
@@ -34,6 +29,7 @@
         <a href="/html/snatac.html">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html">Help</a>
         <a href="/html/about.html" class="current">About</a>
       </div>
@@ -57,7 +53,7 @@
           <p id="note">Note:</p>
           <p id="note-text">If you have any questions about this website, please don’t hesitate to contact anyone of the members below!</p>
         </div>
-        <img src="/imgs/lab_intro.png">
+        <img id="intro-image" src="/imgs/lab_intro.png">
       </div>
       <div class="people">
         <img src="/imgs/jeya.jpg" class="people-img">
@@ -111,6 +107,17 @@
           <p class="email">Email: <a href="mailto:hyhao@umich.edu">hyhao@umich.edu</a></p>
           <p class="people-desc">
             Yuanhao is a PhD student in the Department of Computational Medicine & Bioinformatics (DCMB) in University of Michigan. His research focuses on integrating biomedical knowledge using knowledge graphs and applying biomedical knowledge graphs to large language models.
+          </p>
+        </div>
+      </div>
+      <div class="people">
+        <img src="/imgs/kvchang_img.jpg" class="people-img">
+        <div>
+          <p class="name">Kevin Chang</p>
+          <p class="stage">Undergraduate Student</p>
+          <p class="email">Email: <a href="kvchang@umich.edu">kvchang@umich.edu</a></p>
+          <p class="people-desc">
+            Kevin is an undergraduate student in the Department of Electrical Engineering and Computer Science (EECS) at the University of Michigan, pursuing a major in Computer Science with a minor in User Experience Design. He is currently a research assistant in the Liu Lab, with interests in machine learning, large language models, and web development.
           </p>
         </div>
       </div>
