--- a/webserver/html/ai_chat.html
+++ b/webserver/html/ai_chat.html
@@ -7,12 +7,7 @@
   <title>Chat with AI</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="/css/html5reset.css" rel="stylesheet">
   <!-- <link href="/css/style.css" rel="stylesheet"> -->
   <link href="/css/global.css" rel="stylesheet">
@@ -38,10 +33,10 @@
     <p id="start-new-conversation">Start&nbsp;&nbsp;&nbsp;&nbsp;new conversation</p>
   </div>
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html">Home</a>
         <a href="/html/ai_chat.html" class="current">Chat with AI</a>
@@ -49,6 +44,7 @@
         <a href="/html/snatac.html">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html">Help</a>
         <a href="/html/about.html">About</a>
       </div>
@@ -56,6 +52,17 @@
   </header>
   <main id="main">
     <div class="left" id="ai-container">
+      <p id="intro-title">Website AI Assistant</p>
+      <p id="ask-me">You can ask me to:</p>
+      <p id="list-first">1. Answer questions and generate images about this website</p>
+      <p id="left-examples">Examples:</p>
+      <p id="left-examples-items">1. What is ACSL5?</p>
+      <p id="left-examples-items">2. Can you show the expression of CHGA?
+      
+      <p id="list-second">2. Ask question to GLKB (Genomic Literature Knowledge Base). GLKB can help you explore biomedical literature.</p>
+      <p id="left-examples">Examples:</p>
+      <p id="left-examples-items">1. What is the role of BRCA1 in breast cancer?</p>
+      <p id="left-examples-items">2. How many articles about Alzheimer's disease are published in 2020?</p>
     </div>
     <div class="empty"></div>
     <div class="right" id="chatarea">
@@ -70,14 +77,28 @@
           <p class="rcmd-one-line">What is ACSL5?</p>
           <p>Please tell me the role of LGR5 in intestinal stem cells.</p>
           <p>Can you show the expression of CHGA?</p>
-          <p>Can you show the IGV plot for CLCA1 in intestinal epithelial cells?</p>
+          <p>GLKB: What is the role of BRCA1 in breast cancer?</p>
           <p id="last2">Please show me the differential<br> metabolite expression of GABA in duodenum versus colon tissues.</p>
-          <p id="last1">Please show me the spatial distribution of C15orf48 in the duodenum versus colon tissues.</p>
+          <p id="last1">GLKB: How many articles about Alzheimer's disease are published in 2020?</p>
         </div>
         <div id="chat-input">
           <button id="clear-history">Clear History</button>
-          <textarea id="chat-input-text" placeholder="Chat with the AI assistant, ask anything you want to know "></textarea>
-          <button id="chat-send">Send</button>
+          <div id="input-wrapper">
+            <textarea id="chat-input-text" placeholder="Chat with the AI assistant, ask anything you want to know "></textarea>
+            <button id="chat-send">
+              <svg id="chat-send-svg"width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_8_79)">
+                <path d="M34.8522 17.4802L1.24278 0.629307C1.10617 0.561003 0.949477 0.544932 0.800816 0.581093C0.635824 0.621881 0.493717 0.726385 0.405611 0.871724C0.317504 1.01706 0.290577 1.19139 0.330726 1.35654L3.79412 15.5074C3.84635 15.7204 4.00305 15.8931 4.21198 15.9614L10.1464 17.9985L4.21599 20.0356C4.00707 20.1079 3.85037 20.2766 3.80216 20.4896L0.330726 34.6606C0.294566 34.8092 0.310637 34.9659 0.378941 35.0985C0.535637 35.4159 0.921352 35.5445 1.24278 35.3878L34.8522 18.6333C34.9767 18.5731 35.0772 18.4686 35.1414 18.3481C35.2981 18.0266 35.1696 17.6409 34.8522 17.4802ZM4.29233 30.6347L6.31332 22.3739L18.174 18.3039C18.2664 18.2717 18.3428 18.1994 18.3749 18.103C18.4312 17.9342 18.3428 17.7534 18.174 17.6931L6.31332 13.6271L4.30037 5.3985L29.5325 18.0507L4.29233 30.6347Z" fill="currentColor" />
+              </g>
+              <defs>
+                <clipPath id="clip0_8_79">
+                  <rect width="36" height="36" fill="white"/>
+                </clipPath>
+              </defs>
+              </svg>
+            </button>
+            
+          </div>
         </div>
       </div>
     </div>
