--- a/webserver/html/help.html
+++ b/webserver/html/help.html
@@ -7,26 +7,23 @@
   <title>Help</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
   <link href="/css/html5reset.css" rel="stylesheet">
   <link href="/css/global.css" rel="stylesheet">
   <link href="/css/help.css" rel="stylesheet">
   <script src="/js/nav.js"></script>
+  <script src="/js/help.js"></script>
   <!--$jtc.unique.replacer$<link rel="prefetch" href="/html/home.html">
   <link rel="prefetch" href="/html/about.html">$jtc.unique.replacer$-->
 </head>
 
 <body class="about">
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html">Home</a>
         <a href="/html/ai_chat.html">Chat with AI</a>
@@ -34,46 +31,52 @@
         <a href="/html/snatac.html">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html" class="current">Help</a>
         <a href="/html/about.html">About</a>
       </div>
     </nav>
   </header>
   <main>
-    <h1>Tutorials</h1>
+    <h1 id="title">Tutorials</h1>
+    <div id="iframe-container">
+      <iframe id="youtube" src="https://www.youtube.com/embed/F1Tz5PHCGhs?si=JJ3ApPQd8yLqT9oT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
     <p class="section-title">1. Introduction</p>
     <p class="mytext">
-      Navigation bar is on the top, including home page, expression page, enrichment page, help page and about page. You can click the corresponding link to enter the page you want to visit.
+      Navigation bar is on the top, including home page, scRNA page, snATAC page, Spatial Metabolomics page, Spatial Transcriptomics page, help page, and about page. You can click the corresponding link to enter the page you want to visit.
     </p>
     <p class="mytext">
-      <a href="/html/index.html">Home page:</a> The main page of the website, which provides a brief introduction of the website and the database, and a chatting box with our AI assistant.
+      <a href="/html/home.html">Home page:</a> The main page of the website, which provides a brief introduction of the website and the database, and a chat box with our AI assistant.
     </p>
     <p class="mytext">
-      <a href="/html/expression.html">Expression page:</a> The page for you to visualize the expression of a single gene, or multiple genes. You can see the violin plot of a single gene, or the comparison of multiple genes in a dot plot.
+      <a href="/html/scrna.html">scRNA page:</a> The page for you to visualize the expression of a single gene in epithelial cells or enteroendocrine cells, differential gene expression in different gut regions, and top marker gene expression in goblet cells.
     </p>
     <p class="mytext">
-      <a href="/html/enrichment.html">Enrichment page:</a> This page is to show the enrichment of several pathways, including beta cell pathways, cell death pathways, specific pathways.
+      <a href="/html/snatac.html">snATAC page:</a> This page allows you to visualize the IGV plots of a single gene in all cell types or epithelial cells.
     </p>
     <p class="mytext">
-      <a href="/html/advanced_analysis.html">Advanced enrichment analysis page:</a> This page is to show the enrichment of customised pathways, which is defined by a set of genes.
+      <a href="/html/sm.html">Spatial Metabolomics page:</a> This page displays differential detection of metabolite levels in fetal duodenum and colon tissues and allows users to visualize metabolite distribution.
+    </p>
+    <p class="mytext">
+      <a href="/html/st.html">Spatial Transcriptomics page:</a> This page displays differential distribution of genes in different regions of fetal duodenum and colon tissues (e.g. crypt versus villi).
     </p>
     <p class="mytext last">
-      There is also <a href="/html/help.html">Help page</a> and <a href="/html/about.html">About page</a> to show the tutorials and basic information of this website, and <a href="/html/hormones.html">Small molecules page</a> to show the information of small molecules.
+      There are also the <a href="/html/help.html">Help page</a> and <a href="/html/about.html">About page</a> to show the tutorials and basic information of this website.
     </p>
-    <p class="section-title">2. Expression</p>
+    <p class="section-title">2. scRNA</p>
     <p class="mytext">
-      This page is for you to visualize the expression of a single gene, or multiple genes. You can see the violin plot of a single gene, or the comparison of multiple genes in a dot plot.
-      First you need to select whether you want to see one gene or multiple genes. If you want to see single gene, click "Gene", if you want to see multiple genes, click "Multiple Genes".
+      The page that enables you to visualize the expression of a single gene in epithelial cells or enteroendocrine cells. You can see the UMAP clustering of various cell types and the dot plot of characteristic marker genes of different cell types among epithelial cells or enteroendocrine cells. Additionally, a single gene can be entered in the query box to visualize the feature plot and violin plot of a single gene.
     </p>
-    <img src="/imgs/exp1.png" class="myimg">
-    <p class="sub-title">(1) Single gene</p>
+    <!-- <img src="/imgs/exp1.png" class="myimg">
+    <p class="sub-title">(1) Single gene</p> -->
     <p class="mytext">
-      Input the gene id in the textbox, and then click "Search" button. After several seconds, the violin plot of the gene will be displayed.
+      <a href="/html/scrna_region.html">Region comparison page:</a> This page shows the 3D volcano plot of the differential gene expression (DGE) analysis comparing the scRNA-seq data between the duodenum and colon tissues. Moreover, split violin plots are displayed to show the top duodenum and colon specific marker genes. You can also download the DEG list comparing duodenum and colon tissues in fetal and adult samples.
     </p>
     <p class="mytext">
-      Gene ids should look like INS, TOP2A, PDX1, AL691432.2, etc. (case insensitive) Note that not all gene ids have the expression (can generate the image) here. If that gene doesn't have the expression, it will show an error message.
+      <a href="/html/scrna_goblet.html">Goblet cells page:</a> This page shows the MA plot of the top marker genes enriched in goblet cells compared to other epithelial cells. Split violin plots are displayed to show the top goblet cell marker genes. You can also download the marker list comparing goblet cells to other epithelial cell types.
     </p>
-    <img src="/imgs/exp2.png" class="myimg">
+    <!-- <img src="/imgs/exp2.png" class="myimg">
     <p class="sub-title">(2) Multiple genes</p>
     <p class="mytext">
       You need to input the gene ids in the textbox, separated by space, comma, or new line, and then click "Submit" button. After several seconds, the dot plot of these genes will be displayed.
@@ -81,42 +84,19 @@
     <p class="mytext">
       Gene ids should look like INS, TOP2A, PDX1, AL691432.2, etc. Here almost all gene ids can generate the image successfully, including the gene ids that don't have the expression.
     </p>
-    <img src="/imgs/exp3.png" class="myimg">
-    <p class="section-title">3. Enrichment</p>
+    <img src="/imgs/exp3.png" class="myimg"> -->
+    <p class="section-title">3. snATAC</p>
     <p class="mytext">
-      This page is to show the enrichment plot of several pathways, including beta cell pathways, cell death pathways, specific pathways, and also customised pathways with your own gene list.
-      First you need to select one of the three options (Beta cell pathways, Cell death pathways, Specific pathways) on the left side.
+      This page allows you to visualize the accessibility of a single gene in all cell types cells or epithelial cells. You can see the UMAP clustering of various cell types and the dot plot of accessibility of gene loci close to characteristic marker genes of different cell types among all cells types or epithelial cells. Additionally, a single gene can be entered in the query box to visualize the IGV plot of a single gene.
     </p>
-    <img src="/imgs/enrich6.png" class="myimg">
-    <p class="sub-title">(1) Beta cell pathways</p>
+    <p class="section-title">4. Spatial Metabolomics</p>
     <p class="mytext">
-      Click "Select a pathway" button, and then select a pathway from the dropdown menu. Then click "Submit", the enrichment of it will be displayed later.
+      This page shows the heatmap comparing the Log2(Fold Change (Duodenum/Colon)) of normalized metabolite levels of metabolites detected via MALDI imaging. You can click on individual metabolites to visualize the metabolite distribution in the fetal duodenum and colon tissues as well as quantification of the normalized metabolite levels in the fetal duodenum and colon tissues.
     </p>
-    <img src="/imgs/enrich2.png" class="myimg">
-    <p class="sub-title">(2) Cell death pathways</p>
+    <p class="section-title">5. Spatial Transcriptomics</p>
     <p class="mytext">
-      Click "Select a pathway" button, and then select a pathway from the dropdown menu. Then click "Submit", the enrichment of it will be displayed later.
+      This page displays the UMAP clustering of epithelial cell types in 17 and 20 week old fetal duodenum and colon tissues as well as the dot plot of characteristic marker genes used to identify different epithelial cell types. A drop down menu is provided with 422 genes. Individual genes can be clicked to visualize the expression and distribution of these genes across duodenum and colon tissues. 
     </p>
-    <img src="/imgs/enrich3.png" class="myimg">
-    <p class="sub-title">(3) Specific pathways</p>
-    <p class="mytext">
-      Click "Select a pathway" button, and then select a pathway from the dropdown menu. You can also type in the textbox to search for the pathway name.
-      Then click "Submit", the enrichment of it will be displayed later.
-    </p>
-    <img src="/imgs/enrich4.png" class="myimg">
-    <p class="section-title">4. Advanced Enrichment Analysis</p>
-    <p class="mytext">
-      This page is to show the enrichment of customised pathways, which is defined by a set of genes.
-    </p>
-    <p class="mytext">
-      Input the gene ids in the textbox, separated by space, comma, or new line, 
-      and then click "Launch" button. 
-      Gene ids should look like INS, TOP2A, PDX1, AL691432.2, etc. (case insensitive)
-      After several seconds, the enrichment of these genes will be displayed.
-    </p>
-    <img src="/imgs/gsea.png" class="myimg">
-    <!-- <p class="section-title">5. Home page (chatting area)</p> -->
-
 
 
   </main>
