--- a/webserver/html/snatac.html
+++ b/webserver/html/snatac.html
@@ -5,15 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="2pMqDeXLKfolBqDufnjJ3nCT1tU7Jc7vNm_LBC2GSI8" />
-  <title>Home</title>
+  <title>snATAC</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
   <link href="/css/reset.css" rel="stylesheet">
   <link href="/css/global.css" rel="stylesheet">
   <link href="/css/lib.css" rel="stylesheet">
@@ -27,10 +23,10 @@
 
 <body class="about">
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html">Home</a>
         <a href="/html/ai_chat.html">Chat with AI</a>
@@ -38,13 +34,14 @@
         <a href="/html/snatac.html" class="current">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html">Help</a>
         <a href="/html/about.html">About</a>
       </div>
     </nav>
   </header>
   <div id="main-container">
-    <div class="lib-2-to-1" id="cell-selection">
+    <div class="lib-2-to-1 hidden" id="cell-selection">
       <label>
         <input type="radio" name="cell-selection" id="eecs-select">
         <p>All cell types</p>
@@ -52,6 +49,27 @@
       <label>
         <input type="radio" name="cell-selection" id="ep-select">
         <p>Epithelial cells</p>
+      </label>
+    </div>
+    <h1 class="sub-title">Select Cell Type snATAC</h1>
+    <p class="sub-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Aenean turpis nisl, sollicitudin sit amet laoreet sit amet, 
+      tristique ut sapien. Duis vestibulum congue porta. 
+      Phasellus ac ullamcorper eros, in sollicitudin mi. </p>
+    <div class="card-selection">
+      <label class="card" id="left-card" for="eecs-select">
+        <h3>All cell types</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Aenean turpis nisl, sollicitudin sit amet</p>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Aenean turpis nisl, sollicitudin sit amet</p>
+      </label>
+      <label class="card" id="right-card" for="ep-select">
+        <h3>Epithelial cells</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Aenean turpis nisl, sollicitudin sit amet</p>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Aenean turpis nisl, sollicitudin sit amet</p>
       </label>
     </div>
     <div id="whole-img-container" class="">
@@ -64,15 +82,15 @@
         <p id="error"></p>
       </div>
       <div id="static-imgs">
-        <img src="/imgs/atac_ep_left_no_embed.png" class="ep">
-        <img src="/imgs/atac_ep_right_no_embed.png" class="ep">
-        <img src="/imgs/atac_all_left_no_embed.png" class="eecs">
-        <img src="/imgs/atac_all_right_no_embed.png" class="eecs">
+        <img src="/imgs/atac_ep_left_no_embed.png" class="ep" id="all-left">
+        <img src="/imgs/atac_ep_right_no_embed.png" class="ep" id="all-right">
+        <img src="/imgs/atac_all_left_no_embed.png" class="eecs" id="ep-left">
+        <img src="/imgs/atac_all_right_no_embed.png" class="eecs" id="ep-right">
       </div>
     </div>
     <div id="input-area" class="">
       <div style="position: relative; width: 100%; height: 100%">
-        <p id="genes-text">Genes:</p>
+        <p id="genes-text">Genetic loci:</p>
         <input type="text" id="gene-input" class="lib-text-single">
         <p id="error-msg"></p>
         <button id="submit-button" class="lib-submit">Submit</button>
