--- a/webserver/html/home.html
+++ b/webserver/html/home.html
@@ -8,12 +8,8 @@
   <title>Home</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
   <link href="/css/reset.css" rel="stylesheet">
   <link href="/css/global.css" rel="stylesheet">
   <link href="/css/lib.css" rel="stylesheet">
@@ -27,10 +23,10 @@
 
 <body class="about">
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html" class="current">Home</a>
         <a href="/html/ai_chat.html">Chat with AI</a>
@@ -38,23 +34,31 @@
         <a href="/html/snatac.html">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html">Help</a>
         <a href="/html/about.html">About</a>
       </div>
     </nav>
   </header>
   <div class="left">
-    <h2 id="main-title">Welcome to GutOmicsAtlas!</h2>
+    <div id="main-elements">
+      <h2 id="main-title">Welcome to GutOmicsAtlas</h2>
+      <h3 id="main-inquiry">What Would You Like To Know?</h3>
+      <p id= "supporting-text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+    </div>
+    <div id="chat-rcmd">
+      <p>Please tell me the role of LGR5 in intestinal stem cells.</p>
+      <p>Can you show the expression of CHGA?</p>
+      <p>GLKB: What is the role of BRCA1 in breast cancer?</p>
+    </div>
     <div id="input-area-wrapper">
-      <img src="/imgs/openai2.png">
       <div id="input-area">
         <div>
-          <input type="text" spellcheck="false" placeholder="Enter text to chat with AI assitant">
-          <img src="/imgs/go.png" class="invalid">
+          <input id="chat-input-text" type="text" spellcheck="false" placeholder="Enter text to chat with AI assistant">
+          <img id = "chat-send" src="/imgs/go.png" class="invalid">
         </div>
       </div>
     </div>
-    <p id="intro-text-2">GutOmicsAtlas is an Al-powered, user-friendly, open-access platform for analyzing scRNA-seq, snATAC-seq, spatial metabolomics, and Xenium data. GutOmicsAtlas combines these integrated datasets, offering a systematic analysis of cellular responses and molecular changes in human gut cells during development.</p>
   </div>
 </body>
 <footer>
